Fix Space complexity by boxing with Long.valueOf /Cache, MinMaxSum from SP - HackerRank.